; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_interpolative_encode_sublist.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_interpolative_encode_sublist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.list_encoder = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.list_encoder*, i32, i32)* @interpolative_encode_sublist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @interpolative_encode_sublist(%struct.list_encoder* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.list_encoder*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.list_encoder* %0, %struct.list_encoder** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.list_encoder*, %struct.list_encoder** %4, align 8
  %8 = getelementptr inbounds %struct.list_encoder, %struct.list_encoder* %7, i32 0, i32 1
  %9 = load %struct.list_encoder*, %struct.list_encoder** %4, align 8
  %10 = getelementptr inbounds %struct.list_encoder, %struct.list_encoder* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @bwrite_interpolative_sublist(i32* %8, i32 %11, i32 %12, i32 %13)
  ret void
}

declare dso_local i32 @bwrite_interpolative_sublist(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
